# pokegreen

./: CMakeLists.txt  README.md  assets_manifest_pokegreen.h  launcher_main.cpp  pokegreen.c  pokegreen.h  pokegreen_dispatch_chunk_0.c  pokegreen_dispatch_chunk_1.c  pokegreen_dispatch_chunk_2.c  pokegreen_funcs_0.c  pokegreen_funcs_1.c  pokegreen_funcs_10.c  pokegreen_funcs_11.c  pokegreen_funcs_12.c  pokegreen_funcs_13.c  pokegreen_funcs_14.c  pokegreen_funcs_15.c  pokegreen_funcs_16.c  pokegreen_funcs_17.c  pokegreen_funcs_18.c  pokegreen_funcs_19.c  pokegreen_funcs_2.c  pokegreen_funcs_20.c  pokegreen_funcs_21.c  pokegreen_funcs_22.c  pokegreen_funcs_23.c  pokegreen_funcs_24.c  pokegreen_funcs_25.c  pokegreen_funcs_3.c  pokegreen_funcs_4.c  pokegreen_funcs_5.c  pokegreen_funcs_6.c  pokegreen_funcs_7.c  pokegreen_funcs_8.c  pokegreen_funcs_9.c  pokegreen_internal.h  pokegreen_main.c  pokegreen_rom.c
